Implement dynamic session tabs (#4536)
* Session page redesign

- Link session calendar and session list together
- Add Tanstack react query
- Rewrote /v1/sessions endpoint
- Wrote logic for a generic filter that will allow easier data filtering in the future

* Datapoint endpoint

* Link player session components together

* Load player world times based on selected filters

* AFK time datapoints

* Server occupied datapoint

* Most active gamemode and world

* Small fixes

* Better date picker

* Minor fixes

- Corrected timezone offset calculations in `ServerSessionCalendarCard.tsx`.
- Updated incorrect icons and labels in `SessionAccordion.jsx`.
- Adjusted AFK time percentage calculation in `SessionQueries.java`.
- Modified `ServerRecentSessionsCard.jsx` to remove redundant `isPlayer` prop.
- Improved `DateInputField.tsx` by adding metadata usage and disabling auto-close on selection.

* Fix timezone issues with date picker

* Fix future date reading as 'Today'

* Limit server session query to 10k sessions

* Fix export of sessions endpoint

* Implement datapoint endpoints export

* Fix default datapoint permissions

* Add ServerPie datapoint

* Fix permission issues with datapoint-based graph endpoints

* Fix java date formatter Future dates showing Today

* Add missing license headers

* Fix permission patch when no group has a permission

* Fix Sql.nParameters usage when parameter list is empty

* Create plan_servers_uuid_index

* Use join to server table uuid check instead of inner query

* Fix issues

* Fix wrong exported resources

* Caching implementation for /v1/datapoint and /v1/sessions

* Remove Display_options.Sessions.Show_on_page

* Fix etag issue

* Fix javascript date formatter recent days

* Fix session table export

* Fix date picker buttons overflow on long month names

* Locale loading for DatePicker

Affects issues:
- Close #2742
- Close #4485